Tidied file structure, added modal for event

--- a/sass/abstracts/variables/_colors.scss
+++ b/sass/abstracts/variables/_colors.scss
@@ -1,4 +1,4 @@
-$color__brand: #0c7cce;
+$color__brand: #0064d6;
 
 $color__background-body: #f8f9fa;
 $color__background-screen: #f1f1f1;
@@ -7,7 +7,7 @@ $color__background-button: $color__brand;
 $color__background-pre: #eee;
 $color__background-ins: #fff9c0;
 
-$color__text-screen: #0c7cce;
+$color__text-screen: #0064d6;
 $color__text-input: #666;
 $color__text-input-focus: #111;
 $color__link: #1d1f24; //royalblue
