--- a/sass/base/elements/_forms.scss
+++ b/sass/base/elements/_forms.scss
@@ -1,8 +1,18 @@
 form {
-    max-width: 600px;
-
+    
     div > * {
         width: 100%;
         display: block;
+    }
+
+    label {
+        font-size: .9rem;
+        margin-bottom: .25rem;
+    }
+}
+
+.create-event-form {
+    > *:not(input[type="submit"]) {
+        @extend .w-full;
     }
 }
