--- a/sass/utilities/_grid.scss
+++ b/sass/utilities/_grid.scss
@@ -18,6 +18,14 @@
     grid-row-gap: calc(#{$space} / 2);
 }
 
+.gap-space-half {
+    grid-gap: calc(#{$space} / 2);
+}
+
+.justify-self-start {
+    justify-self: flex-start;
+}
+
 .cols-2 {
     grid-template-columns: repeat(2, 1fr);
 }
@@ -26,7 +34,19 @@
     grid-template-columns: repeat(3, 1fr);
 }
 
+.col-start-1 {
+    grid-column-start: 1;
+}
+
 @media (min-width: $md) {
+    .md\:cols-2 {
+        grid-template-columns: repeat(2, 1fr);
+    }
+   
+    .md\:col-span-2 {
+        grid-column: 1 / 3;
+    }
+
     .md\:cols-3 {
         grid-template-columns: repeat(3, 1fr);
     }
