--- a/sass/utilities/_space.scss
+++ b/sass/utilities/_space.scss
@@ -2,12 +2,27 @@
     margin-bottom: calc(#{$space} / 2);
 }
 
+.mx-auto {
+    margin-left: auto;
+    margin-right: auto;
+}
+
 .mt-space {
     margin-top: $space;
 }
 
 .mb-space {
     margin-bottom: $space;
+}
+
+.px-space {
+    padding-left: $space;
+    padding-right: $space;
+}
+
+.py-space-half {
+    padding-top: calc(#{$space} / 2);
+    padding-bottom: calc(#{$space} / 2);
 }
 
 .py-space {
