--- a/style.css
+++ b/style.css
@@ -540,7 +540,7 @@ a:visited {
 }
 
 a:hover, a:focus, a:active {
-	color: #0c7cce;
+	color: #0064d6;
 }
 
 a:focus {
@@ -554,19 +554,21 @@ a:hover, a:active {
 /* Forms
 --------------------------------------------- */
 button,
+.modal__btn,
 input[type="button"],
 input[type="reset"],
 input[type="submit"] {
 	border: 1px solid;
-	border-color: #0c7cce;
+	border-color: #0064d6;
 	border-radius: 3px;
-	background: #0c7cce;
+	background: #0064d6;
 	color: #FFF;
 	line-height: 1;
-	padding: 0.6em 1em 0.4em;
+	padding: .75rem 2rem;
 }
 
 button:hover,
+.modal__btn:hover,
 input[type="button"]:hover,
 input[type="reset"]:hover,
 input[type="submit"]:hover {
@@ -574,6 +576,8 @@ input[type="submit"]:hover {
 }
 
 button:active, button:focus,
+.modal__btn:active,
+.modal__btn:focus,
 input[type="button"]:active,
 input[type="button"]:focus,
 input[type="reset"]:active,
@@ -581,6 +585,23 @@ input[type="reset"]:focus,
 input[type="submit"]:active,
 input[type="submit"]:focus {
 	border-color: #aaa #bbb #bbb;
+}
+
+button,
+input[type="submit"] {
+	will-change: auto;
+	-webkit-transform: translateZ(0);
+	transform: translateZ(0);
+	transition: -webkit-transform .25s ease-out;
+	transition: transform .25s ease-out;
+	transition: transform .25s ease-out,-webkit-transform .25s ease-out;
+}
+
+button:hover,
+input[type="submit"]:hover {
+	-webkit-transform: scale(1.05);
+	transform: scale(1.05);
+	cursor: pointer;
 }
 
 input[type="text"],
@@ -602,7 +623,7 @@ textarea {
 	color: #666;
 	border: 1px solid #ccc;
 	border-radius: 3px;
-	padding: 3px;
+	padding: 7px .75rem;
 }
 
 input[type="text"]:focus,
@@ -624,6 +645,10 @@ textarea:focus {
 	color: #111;
 }
 
+input[type="submit"] {
+	padding: .75rem 2rem;
+}
+
 select {
 	border: 1px solid #ccc;
 }
@@ -632,13 +657,14 @@ textarea {
 	width: 100%;
 }
 
-form {
-	max-width: 600px;
-}
-
 form div > * {
 	width: 100%;
 	display: block;
+}
+
+form label {
+	font-size: .9rem;
+	margin-bottom: .25rem;
 }
 
 .container {
@@ -656,7 +682,7 @@ form div > * {
 /* Navigation
 --------------------------------------------- */
 .sub-menu {
-	background-color: #0c7cce;
+	background-color: #0064d6;
 }
 
 .sub-menu a {
@@ -989,6 +1015,162 @@ form div > * {
 	/* Legacy iOS */
 }
 
+/**************************\
+  Basic Modal Styles
+\**************************/
+.modal {
+	font-family: -apple-system,BlinkMacSystemFont,avenir next,avenir,helvetica neue,helvetica,ubuntu,roboto,noto,segoe ui,arial,sans-serif;
+}
+
+.modal__overlay {
+	position: fixed;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	background: rgba(0, 0, 0, 0.8);
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.modal__container {
+	background-color: #fff;
+	padding: 30px;
+	max-width: 500px;
+	max-height: 100vh;
+	border-radius: 4px;
+	overflow-y: auto;
+	box-sizing: border-box;
+}
+
+.modal__header {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+
+.modal__title {
+	margin-top: 0;
+	margin-bottom: 0;
+	font-weight: 600;
+	line-height: 1.25;
+	box-sizing: border-box;
+}
+
+.modal__close {
+	background: transparent;
+	border: 0;
+}
+
+.modal__header .modal__close:before {
+	content: "\2715";
+}
+
+.modal__content {
+	margin-top: 1rem;
+	margin-bottom: 2rem;
+	line-height: 1.5;
+	color: rgba(0, 0, 0, 0.8);
+}
+
+.modal__btn {
+	background-color: #e6e6e6;
+	color: rgba(0, 0, 0, 0.8);
+	border-radius: .25rem;
+	border-style: none;
+	border-width: 0;
+	cursor: pointer;
+	-webkit-appearance: button;
+	text-transform: none;
+	overflow: visible;
+	line-height: 1.15;
+	margin: 0;
+	will-change: transform;
+	-moz-osx-font-smoothing: grayscale;
+	-webkit-backface-visibility: hidden;
+	backface-visibility: hidden;
+}
+
+.modal__btn-primary {
+	background-color: #00449e;
+	color: #fff;
+}
+
+button[data-micromodal-trigger="modal-1"] {
+	position: fixed;
+	right: 2rem;
+	bottom: 2rem;
+}
+
+/**************************\
+  Demo Animation Style
+\**************************/
+@keyframes mmfadeIn {
+	from {
+		opacity: 0;
+	}
+	to {
+		opacity: 1;
+	}
+}
+
+@keyframes mmfadeOut {
+	from {
+		opacity: 1;
+	}
+	to {
+		opacity: 0;
+	}
+}
+
+@keyframes mmslideIn {
+	from {
+		transform: translateY(15%);
+	}
+	to {
+		transform: translateY(0);
+	}
+}
+
+@keyframes mmslideOut {
+	from {
+		transform: translateY(0);
+	}
+	to {
+		transform: translateY(-10%);
+	}
+}
+
+.micromodal-slide {
+	display: none;
+}
+
+.micromodal-slide.is-open {
+	display: block;
+}
+
+.micromodal-slide[aria-hidden="false"] .modal__overlay {
+	animation: mmfadeIn 0.3s cubic-bezier(0, 0, 0.2, 1);
+}
+
+.micromodal-slide[aria-hidden="false"] .modal__container {
+	animation: mmslideIn 0.3s cubic-bezier(0, 0, 0.2, 1);
+}
+
+.micromodal-slide[aria-hidden="true"] .modal__overlay {
+	animation: mmfadeOut 0.3s cubic-bezier(0, 0, 0.2, 1);
+}
+
+.micromodal-slide[aria-hidden="true"] .modal__container {
+	animation: mmslideOut 0.3s cubic-bezier(0, 0, 0.2, 1);
+}
+
+.micromodal-slide .modal__container,
+.micromodal-slide .modal__overlay {
+	will-change: transform;
+}
+
 /*--------------------------------------------------------------
 # Plugins
 --------------------------------------------------------------*/
@@ -1030,7 +1212,7 @@ form div > * {
 	box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.6);
 	clip: auto !important;
 	clip-path: none;
-	color: #0c7cce;
+	color: #0064d6;
 	display: block;
 	font-size: 0.875rem;
 	font-weight: 700;
@@ -1105,7 +1287,11 @@ form div > * {
 	font-weight: 500;
 }
 
-.font-bold {
+.font-bold, button,
+.modal__btn,
+input[type="button"],
+input[type="reset"],
+input[type="submit"] {
 	font-weight: 700;
 }
 
@@ -1117,7 +1303,7 @@ form div > * {
 	text-transform: capitalize;
 }
 
-.text-center, .card {
+.text-center {
 	text-align: center;
 }
 
@@ -1155,6 +1341,14 @@ form div > * {
 	grid-row-gap: calc(2rem / 2);
 }
 
+.gap-space-half {
+	grid-gap: calc(2rem / 2);
+}
+
+.justify-self-start {
+	justify-self: flex-start;
+}
+
 .cols-2 {
 	grid-template-columns: repeat(2, 1fr);
 }
@@ -1163,7 +1357,17 @@ form div > * {
 	grid-template-columns: repeat(3, 1fr);
 }
 
+.col-start-1 {
+	grid-column-start: 1;
+}
+
 @media (min-width: 45em) {
+	.md\:cols-2 {
+		grid-template-columns: repeat(2, 1fr);
+	}
+	.md\:col-span-2 {
+		grid-column: 1 / 3;
+	}
 	.md\:cols-3 {
 		grid-template-columns: repeat(3, 1fr);
 	}
@@ -1178,6 +1382,11 @@ form div > * {
 	margin-bottom: calc(2rem / 2);
 }
 
+.mx-auto {
+	margin-left: auto;
+	margin-right: auto;
+}
+
 .mt-space {
 	margin-top: 2rem;
 }
@@ -1186,14 +1395,52 @@ form div > * {
 	margin-bottom: 2rem;
 }
 
+.px-space {
+	padding-left: 2rem;
+	padding-right: 2rem;
+}
+
+.py-space-half, .card {
+	padding-top: calc(2rem / 2);
+	padding-bottom: calc(2rem / 2);
+}
+
 .py-space {
 	padding-top: 2rem;
 	padding-bottom: 2rem;
 }
 
-.py-space-2, .card {
+.py-space-2 {
 	padding-top: calc(2rem * 2);
 	padding-bottom: calc(2rem * 2);
+}
+
+/* Width
+--------------------------------------------- */
+.w-full, .create-event-form > *:not(input[type="submit"]) {
+	width: 100%;
+}
+
+.w-max {
+	width: max-content;
+}
+
+.w-max-theme {
+	max-width: 40rem;
+}
+
+.w-half {
+	width: 50%;
+}
+
+.w-40 {
+	width: 40%;
+}
+
+/* Display
+--------------------------------------------- */
+.block {
+	display: block;
 }
 
 /*# sourceMappingURL=style.css.map */
