Tidied up styling and added a form for Schools

--- a/sass/components/navigation/_navigation.scss
+++ b/sass/components/navigation/_navigation.scss
@@ -13,7 +13,7 @@
 .main-navigation {
 	display: flex;
 	align-items: center;
-	@extend .font-medium;
+	@extend .font-bold;
 
 	ul {
 		display: none;
