--- a/sass/theme/components/_card.scss
+++ b/sass/theme/components/_card.scss
@@ -1,14 +1,25 @@
 .card {
-    @extend .py-space-half;
-    box-shadow: rgba(0, 0, 0, 0.08) 0px 4px 12px;
+    box-shadow:
+    0 2.8px 2.2px rgba(0, 0, 0, 0.006),
+    0 6.7px 5.3px rgba(0, 0, 0, 0.008),
+    0 12.5px 10px rgba(0, 0, 0, 0.01),
+    0 22.3px 17.9px rgba(0, 0, 0, 0.012),
+    0 41.8px 33.4px rgba(0, 0, 0, 0.014),
+    0 100px 80px rgba(0, 0, 0, 0.02)
+    ;
     border-radius: 10px;
     background-color: #FFF;
 }
 
-.cardValue {
-    @extend .text-xl, .font-black, .md\:text-4xl;
+.cardData {
+    @extend .text-xl, .md\:text-4xl, .font-bold;
 }
 
 .cardText {
-    @extend .capitalize;
+    display: inline-block;
+    border-radius: 20px;
+    background-color: $color__brand;
+    padding: calc(#{$space} / 4 ) $space;
+    color: #FFF;
+    @extend .capitalize, .text-sm, .font-bold;
 }
