--- a/style.css
+++ b/style.css
@@ -56,6 +56,11 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 	- Alignments
 
 --------------------------------------------------------------*/
+.bg-brand {
+	color: #FFF;
+	background-color: #0076d6;
+}
+
 /*--------------------------------------------------------------
 # Generic
 --------------------------------------------------------------*/
@@ -540,7 +545,7 @@ a:visited {
 }
 
 a:hover, a:focus, a:active {
-	color: #0064d6;
+	color: #0076d6;
 }
 
 a:focus {
@@ -559,9 +564,9 @@ input[type="button"],
 input[type="reset"],
 input[type="submit"] {
 	border: 1px solid;
-	border-color: #0064d6;
+	border-color: #0076d6;
 	border-radius: 3px;
-	background: #0064d6;
+	background: #0076d6;
 	color: #FFF;
 	line-height: 1;
 	padding: .75rem 2rem;
@@ -682,7 +687,7 @@ form label {
 /* Navigation
 --------------------------------------------- */
 .sub-menu {
-	background-color: #0064d6;
+	background-color: #0076d6;
 }
 
 .sub-menu a {
@@ -955,9 +960,17 @@ form label {
 }
 
 .card {
-	box-shadow: rgba(0, 0, 0, 0.08) 0px 4px 12px;
+	box-shadow: 0 2.8px 2.2px rgba(0, 0, 0, 0.006), 0 6.7px 5.3px rgba(0, 0, 0, 0.008), 0 12.5px 10px rgba(0, 0, 0, 0.01), 0 22.3px 17.9px rgba(0, 0, 0, 0.012), 0 41.8px 33.4px rgba(0, 0, 0, 0.014), 0 100px 80px rgba(0, 0, 0, 0.02);
 	border-radius: 10px;
 	background-color: #FFF;
+}
+
+.cardText {
+	display: inline-block;
+	border-radius: 20px;
+	background-color: #0076d6;
+	padding: calc(2rem / 4) 2rem;
+	color: #FFF;
 }
 
 /* roboto-300 - latin */
@@ -1018,10 +1031,6 @@ form label {
 /**************************\
   Basic Modal Styles
 \**************************/
-.modal {
-	font-family: -apple-system,BlinkMacSystemFont,avenir next,avenir,helvetica neue,helvetica,ubuntu,roboto,noto,segoe ui,arial,sans-serif;
-}
-
 .modal__overlay {
 	position: fixed;
 	top: 0;
@@ -1053,7 +1062,6 @@ form label {
 .modal__title {
 	margin-top: 0;
 	margin-bottom: 0;
-	font-weight: 600;
 	line-height: 1.25;
 	box-sizing: border-box;
 }
@@ -1212,7 +1220,7 @@ button[data-micromodal-trigger="modal-1"] {
 	box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.6);
 	clip: auto !important;
 	clip-path: none;
-	color: #0064d6;
+	color: #0076d6;
 	display: block;
 	font-size: 0.875rem;
 	font-weight: 700;
@@ -1259,15 +1267,19 @@ button[data-micromodal-trigger="modal-1"] {
 
 /* Text
 --------------------------------------------- */
-.text-sm {
+.text-sm, .cardText {
 	font-size: .9rem;
+}
+
+.text-md {
+	font-size: 1.25rem;
 }
 
 .text-lg {
 	font-size: 1.5rem;
 }
 
-.text-xl, .cardValue {
+.text-xl, .cardData {
 	font-size: 2rem;
 }
 
@@ -1283,7 +1295,7 @@ button[data-micromodal-trigger="modal-1"] {
 	font-size: 2.5rem;
 }
 
-.font-medium, .main-navigation {
+.font-medium {
 	font-weight: 500;
 }
 
@@ -1291,11 +1303,16 @@ button[data-micromodal-trigger="modal-1"] {
 .modal__btn,
 input[type="button"],
 input[type="reset"],
-input[type="submit"] {
+input[type="submit"], .main-navigation, .cardData, .cardText {
 	font-weight: 700;
 }
 
-.font-black, .cardValue {
+.font-black, h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
 	font-weight: 900;
 }
 
@@ -1308,11 +1325,17 @@ input[type="submit"] {
 }
 
 @media (min-width: 45em) {
+	.md\:text-2xl {
+		font-size: 2.5rem;
+	}
 	.md\:text-3xl {
 		font-size: 3rem;
 	}
-	.md\:text-4xl, .cardValue {
+	.md\:text-4xl, .cardData {
 		font-size: 3.5rem;
+	}
+	.md\:text-5xl {
+		font-size: 4rem;
 	}
 	.md\:text-center {
 		text-align: center;
@@ -1382,6 +1405,10 @@ input[type="submit"] {
 	margin-bottom: calc(2rem / 2);
 }
 
+.mt-space-half {
+	margin-top: calc(2rem / 2);
+}
+
 .mx-auto {
 	margin-left: auto;
 	margin-right: auto;
@@ -1400,7 +1427,7 @@ input[type="submit"] {
 	padding-right: 2rem;
 }
 
-.py-space-half, .card {
+.py-space-half {
 	padding-top: calc(2rem / 2);
 	padding-bottom: calc(2rem / 2);
 }
