--- a/sass/utilities/_display.scss
+++ b/sass/utilities/_display.scss
@@ -1,3 +1,19 @@
 .block {
     display: block;
 }
+
+.flex {
+    display: flex;
+}
+
+.justify-self-start {
+    justify-self: flex-start;
+}
+
+.justify-center {
+    justify-content: center;
+}
+
+.items-center {
+    align-items: center;
+}
