--- a/style.css
+++ b/style.css
@@ -56,11 +56,6 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 	- Alignments
 
 --------------------------------------------------------------*/
-.bg-brand {
-	color: #FFF;
-	background-color: #0076d6;
-}
-
 /*--------------------------------------------------------------
 # Generic
 --------------------------------------------------------------*/
@@ -745,7 +740,7 @@ form label {
 	text-decoration: none;
 }
 
-@media screen and (min-width: 45em) {
+@media screen and (min-width: 48em) {
 	.hamburger {
 		display: none !important;
 	}
@@ -933,30 +928,16 @@ form label {
 	padding-right: 2rem;
 }
 
-.user-profile .container {
-	display: grid;
-}
-
-@media (min-width: 45em) {
-	.user-profile .container {
-		grid-template-columns: max-content 1fr;
-	}
-}
-
-.user-profile-photo {
-	border-radius: 100%;
-}
-
 .user-profile-info {
-	max-width: 350px;
+	max-width: 375px;
 }
 
 .user-profile-info > *:not(:last-of-type) {
-	margin-bottom: calc(2rem / 3);
+	margin-bottom: calc(2rem / 4);
 }
 
 .user-profile-info .description {
-	max-width: 330px;
+	max-width: 300px;
 }
 
 .card {
@@ -965,12 +946,25 @@ form label {
 	background-color: #FFF;
 }
 
+.card a {
+	text-decoration: none;
+}
+
 .cardText {
 	display: inline-block;
 	border-radius: 20px;
 	background-color: #0076d6;
 	padding: calc(2rem / 4) 2rem;
 	color: #FFF;
+}
+
+.card-blue {
+	background-color: #0076d6;
+	color: #FFF;
+}
+
+.card-blue a {
+	color: currentColor;
 }
 
 /* roboto-300 - latin */
@@ -1295,7 +1289,7 @@ button[data-micromodal-trigger="modal-1"] {
 	font-size: 2.5rem;
 }
 
-.font-medium {
+.font-medium, label {
 	font-weight: 500;
 }
 
@@ -1324,7 +1318,10 @@ h6 {
 	text-align: center;
 }
 
-@media (min-width: 45em) {
+@media (min-width: 48em) {
+	.md\:text-md {
+		font-size: 1.25rem;
+	}
 	.md\:text-2xl {
 		font-size: 2.5rem;
 	}
@@ -1368,8 +1365,8 @@ h6 {
 	grid-gap: calc(2rem / 2);
 }
 
-.justify-self-start {
-	justify-self: flex-start;
+.gap {
+	grid-gap: calc(2rem / 3);
 }
 
 .cols-2 {
@@ -1384,7 +1381,13 @@ h6 {
 	grid-column-start: 1;
 }
 
-@media (min-width: 45em) {
+@media (min-width: 25em) {
+	.sm\:cols-2 {
+		grid-template-columns: repeat(2, 1fr);
+	}
+}
+
+@media (min-width: 48em) {
 	.md\:cols-2 {
 		grid-template-columns: repeat(2, 1fr);
 	}
@@ -1418,6 +1421,10 @@ h6 {
 	margin-top: 2rem;
 }
 
+.mt-space-2 {
+	margin-top: calc(2rem * 2);
+}
+
 .mb-space {
 	margin-bottom: 2rem;
 }
@@ -1440,6 +1447,10 @@ h6 {
 .py-space-2 {
 	padding-top: calc(2rem * 2);
 	padding-bottom: calc(2rem * 2);
+}
+
+.p-space {
+	padding: 2rem;
 }
 
 /* Width
@@ -1468,6 +1479,22 @@ h6 {
 --------------------------------------------- */
 .block {
 	display: block;
+}
+
+.flex {
+	display: flex;
+}
+
+.justify-self-start {
+	justify-self: flex-start;
+}
+
+.justify-center {
+	justify-content: center;
+}
+
+.items-center {
+	align-items: center;
 }
 
 /*# sourceMappingURL=style.css.map */
