Made the radius of the dash school img full

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -144,3 +144,7 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 /* Display
 --------------------------------------------- */
 @import "utilities/display";
+
+/* Other
+--------------------------------------------- */
+@import "utilities/other";
