Added logic to restrict access

--- a/sass/theme/_header.scss
+++ b/sass/theme/_header.scss
@@ -5,11 +5,8 @@
 }
 
 .site-header .container, .site-branding {
+    width: 100%;
     display: flex;
     align-items: center;
     justify-content: space-between;
-}
-
-.custom-logo {
-    margin-right: calc(#{$space} / 3);
 }
