--- a/sass/base/elements/_fields.scss
+++ b/sass/base/elements/_fields.scss
@@ -13,6 +13,7 @@ input[type="time"],
 input[type="datetime"],
 input[type="datetime-local"],
 input[type="color"],
+select,
 textarea {
 	color: $color__text-input;
 	border: 1px solid $color__border-input;
