--- a/sass/theme/_main.scss
+++ b/sass/theme/_main.scss
@@ -2,3 +2,9 @@
     padding-left: $space;
     padding-right: $space;
 }
+
+.container {
+	max-width: $size__container;
+	margin-left: auto;
+	margin-right: auto;
+}
