--- a/sass/theme/components/_modal.scss
+++ b/sass/theme/components/_modal.scss
@@ -41,6 +41,7 @@
 .modal__close {
   background: transparent;
   border: 0;
+  color: #404040;
 }
 
 .modal__header .modal__close:before { content: "\2715"; }
