--- a/style.css
+++ b/style.css
@@ -368,54 +368,6 @@ h6 {
 	clear: both;
 }
 
-dfn,
-cite,
-em,
-i {
-	font-style: italic;
-}
-
-blockquote {
-	margin: 0 1.5em;
-}
-
-address {
-	margin: 0 0 1.5em;
-}
-
-pre {
-	background: #eee;
-	font-family: "Courier 10 Pitch", courier, monospace;
-	line-height: 1.6;
-	margin-bottom: 1.6em;
-	max-width: 100%;
-	overflow: auto;
-	padding: 1.6em;
-}
-
-code,
-kbd,
-tt,
-var {
-	font-family: monaco, consolas, "Andale Mono", "DejaVu Sans Mono", monospace;
-}
-
-abbr,
-acronym {
-	border-bottom: 1px dotted #666;
-	cursor: help;
-}
-
-mark,
-ins {
-	background: #fff9c0;
-	text-decoration: none;
-}
-
-big {
-	font-size: 125%;
-}
-
 /* Elements
 --------------------------------------------- */
 * {
@@ -503,6 +455,11 @@ input[type="submit"]:hover {
 	color: #0076d6 !important;
 	border: 3px solid #0076d6;
 	padding: .5rem;
+}
+
+.profile-card button:hover {
+	border-color: #6b7075;
+	color: #6b7075 !important;
 }
 
 input[type="text"],
