--- a/sass/base/elements/_buttons.scss
+++ b/sass/base/elements/_buttons.scss
@@ -36,7 +36,7 @@ input[type="submit"] {
 }
 
 .profile-card button {
-	@extend .cardText;	
+	@extend .cardText, .font-medium;	
 	background: transparent !important;
 	color: $color__brand !important;
 	border: 3px solid $color__brand;
