--- a/sass/theme/components/_modal.scss
+++ b/sass/theme/components/_modal.scss
@@ -22,18 +22,17 @@
   max-height: 100vh;
   border-radius: 4px;
   overflow-y: auto;
-  box-sizing: border-box;
 }
 
 .modal__header {
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-end;
   align-items: center;
 }
 
 .modal__title {
   margin-top: 0;
-  margin-bottom: 0;
+  margin-bottom: .25rem;
   line-height: 1.25;
   box-sizing: border-box;
 }
@@ -42,6 +41,7 @@
   background: transparent;
   border: 0;
   color: #404040;
+  padding: 0;
 }
 
 .modal__header .modal__close:before { content: "\2715"; }
