--- a/sass/abstracts/variables/_colors.scss
+++ b/sass/abstracts/variables/_colors.scss
@@ -14,7 +14,8 @@ $color__text-input-focus: #111;
 $color__link: #1d1f24; //royalblue
 $color__link-visited: $color__link;
 $color__link-hover: $color__brand;
-$color__text-main: #404040;
+$color__text-title: #404040;
+$color__text-main: #666;
 
 $color__border-button: $color__brand;
 $color__border-button-hover: #ccc #bbb #aaa;
