--- a/sass/base/elements/_buttons.scss
+++ b/sass/base/elements/_buttons.scss
@@ -1,4 +1,5 @@
 button,
+.um input[type=submit].um-button,
 .modal__btn,
 input[type="button"],
 input[type="reset"],
@@ -6,7 +7,7 @@ input[type="submit"] {
 	border: 1px solid;
 	border-color: $color__border-button;
 	border-radius: 3px;
-	background: $color__background-button;
+	background: $color__background-button !important;
 	color: #FFF;
 	line-height: 1;
 	padding: .75rem 2rem;
