--- a/sass/base/elements/_body.scss
+++ b/sass/base/elements/_body.scss
@@ -3,6 +3,7 @@
 }
 
 body {
+	margin: 0;
 	background: $color__background-body; // Fallback for when there is no custom background color defined.
 }
 
