--- a/sass/theme/components/_modal.scss
+++ b/sass/theme/components/_modal.scss
@@ -26,7 +26,7 @@
 
 .modal__header {
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-between;
   align-items: center;
 }
 
