--- a/style.css
+++ b/style.css
@@ -697,7 +697,7 @@ form label {
 
 .modal__header {
 	display: flex;
-	justify-content: flex-end;
+	justify-content: space-between;
 	align-items: center;
 }
 
