--- a/sass/theme/components/_card.scss
+++ b/sass/theme/components/_card.scss
@@ -33,7 +33,7 @@
     color: #FFF;
 }
 
-.school-dashboard {
+.school-dashboard-cards.coloured-bg {
     background-color: var(--primary-colour);
     color: #FFF;
 
