--- a/sass/_navigation.scss
+++ b/sass/_navigation.scss
@@ -1,5 +1,6 @@
 .sub-menu {
 	background-color: var(--primary-colour);
+	font-size: .9rem;
 	
 	a {
 		color: #FFF;
@@ -70,7 +71,7 @@
 		display: flex;
 		justify-content: flex-end;
 
-		li:not(:last-of-type) {
+		& > li:not(:last-of-type) {
 			margin-right: 2rem;
 		}
 	}
