--- a/style.css
+++ b/style.css
@@ -568,6 +568,30 @@ form label {
 	margin-right: auto;
 }
 
+.tribe-common .tribe-common-c-btn,
+.tribe-events .tribe-events-c-ical__link:hover,
+.tribe-events .tribe-events-c-ical__link:active,
+.tribe-events .tribe-events-c-ical__link:focus {
+	background-color: var(--primary-colour);
+}
+
+.tribe-common .tribe-common-c-svgicon,
+.tribe-events-cal-links .tribe-events-gcal,
+.tribe-events-cal-links .tribe-events-ical,
+.tribe-events .tribe-events-c-ical__link,
+.tribe-events .tribe-events-calendar-month__day--current .tribe-events-calendar-month__day-date-link {
+	color: var(--primary-colour);
+}
+
+.tribe-events .tribe-events-c-ical__link {
+	border: 1px solid var(--primary-colour);
+}
+
+.tribe-common .tribe-common-c-btn:hover {
+	background-color: var(--primary-colour);
+	opacity: .8;
+}
+
 .user-profile-info img {
 	border-radius: 100%;
 }
@@ -606,12 +630,12 @@ form label {
 	color: #FFF;
 }
 
-.school-dashboard {
+.school-dashboard-cards.coloured-bg {
 	background-color: var(--primary-colour);
 	color: #FFF;
 }
 
-.school-dashboard a {
+.school-dashboard-cards.coloured-bg a {
 	color: currentColor;
 }
 
@@ -857,6 +881,7 @@ button[data-micromodal-trigger="modal-1"] {
 --------------------------------------------------------------*/
 .sub-menu {
 	background-color: var(--primary-colour);
+	font-size: .9rem;
 }
 
 .sub-menu a {
@@ -922,7 +947,7 @@ button[data-micromodal-trigger="modal-1"] {
 		display: flex;
 		justify-content: flex-end;
 	}
-	#primary-menu li:not(:last-of-type) {
+	#primary-menu > li:not(:last-of-type) {
 		margin-right: 2rem;
 	}
 	.menu-toggle {
