Added some updates

--- a/sass/theme/_main.scss
+++ b/sass/theme/_main.scss
@@ -15,6 +15,7 @@
 .tribe-events-cal-links .tribe-events-gcal,
 .tribe-events-cal-links .tribe-events-ical,
 .tribe-events .tribe-events-c-ical__link, 
+.tribe-events .tribe-events-calendar-month__day--current .tribe-events-calendar-month__day-date,
 .tribe-events .tribe-events-calendar-month__day--current .tribe-events-calendar-month__day-date-link {
 	color: var(--primary-colour);
 }
