--- a/style.css
+++ b/style.css
@@ -149,11 +149,11 @@ h6 {
 * Space
 */
 .mb-space-half {
-	margin-bottom: calc(2rem / 2);
+	margin-bottom: calc(1.5rem / 2);
 }
 
 .mt-space-half {
-	margin-top: calc(2rem / 2);
+	margin-top: calc(1.5rem / 2);
 }
 
 .mx-auto {
@@ -162,48 +162,48 @@ h6 {
 }
 
 .mt-space {
-	margin-top: 2rem;
+	margin-top: 1.5rem;
 }
 
 .ml-space {
-	margin-left: 2rem;
+	margin-left: 1.5rem;
 }
 
 .mt-space-2 {
-	margin-top: calc(2rem * 2);
+	margin-top: calc(1.5rem * 2);
 }
 
 .mb-space {
-	margin-bottom: 2rem;
+	margin-bottom: 1.5rem;
 }
 
 .px-space {
-	padding-left: 2rem;
-	padding-right: 2rem;
+	padding-left: 1.5rem;
+	padding-right: 1.5rem;
 }
 
 .py-space-half {
-	padding-top: calc(2rem / 2);
-	padding-bottom: calc(2rem / 2);
+	padding-top: calc(1.5rem / 2);
+	padding-bottom: calc(1.5rem / 2);
 }
 
 .py-space {
-	padding-top: 2rem;
-	padding-bottom: 2rem;
+	padding-top: 1.5rem;
+	padding-bottom: 1.5rem;
 }
 
 .py-space-2 {
-	padding-top: calc(2rem * 2);
-	padding-bottom: calc(2rem * 2);
+	padding-top: calc(1.5rem * 2);
+	padding-bottom: calc(1.5rem * 2);
 }
 
 .py-space-3 {
-	padding-top: calc(2rem * 3);
-	padding-bottom: calc(2rem * 3);
+	padding-top: calc(1.5rem * 3);
+	padding-bottom: calc(1.5rem * 3);
 }
 
 .p-space {
-	padding: 2rem;
+	padding: 1.5rem;
 }
 
 /**
@@ -214,27 +214,27 @@ h6 {
 }
 
 .gap-space {
-	grid-gap: 2rem;
+	grid-gap: 1.5rem;
 }
 
 .gap-y-space {
-	grid-row-gap: 2rem;
+	grid-row-gap: 1.5rem;
 }
 
 .gap-x-space {
-	grid-column-gap: 2rem;
+	grid-column-gap: 1.5rem;
 }
 
 .gap-y-space-half {
-	grid-row-gap: calc(2rem / 2);
+	grid-row-gap: calc(1.5rem / 2);
 }
 
 .gap-space-half {
-	grid-gap: calc(2rem / 2);
+	grid-gap: calc(1.5rem / 2);
 }
 
 .gap {
-	grid-gap: calc(2rem / 3);
+	grid-gap: calc(1.5rem / 3);
 }
 
 .cols-profile {
@@ -273,7 +273,7 @@ h6 {
 		grid-template-columns: repeat(3, 1fr);
 	}
 	.md\:gap-y-space-2 {
-		grid-column-gap: calc(2rem * 2);
+		grid-column-gap: calc(1.5rem * 2);
 	}
 }
 
@@ -548,7 +548,7 @@ form label {
 # Theme
 --------------------------------------------------------------*/
 .site-header {
-	padding: calc(2rem / 2) 2rem;
+	padding: calc(1.5rem / 2) 1.5rem;
 	border-bottom: 1px solid #e3eaef;
 }
 
@@ -579,6 +579,7 @@ form label {
 .tribe-events-cal-links .tribe-events-gcal,
 .tribe-events-cal-links .tribe-events-ical,
 .tribe-events .tribe-events-c-ical__link,
+.tribe-events .tribe-events-calendar-month__day--current .tribe-events-calendar-month__day-date,
 .tribe-events .tribe-events-calendar-month__day--current .tribe-events-calendar-month__day-date-link {
 	color: var(--primary-colour);
 }
@@ -626,7 +627,7 @@ form label {
 	display: inline-block;
 	border-radius: 20px;
 	background-color: var(--primary-colour);
-	padding: calc(2rem / 4) 2rem;
+	padding: calc(1.5rem / 4) 1.5rem;
 	color: #FFF;
 }
 
@@ -768,10 +769,17 @@ form label {
 	backface-visibility: hidden;
 }
 
-button[data-micromodal-trigger="modal-1"] {
+.card button[data-micromodal-trigger="event-modal"] {
+	background: transparent;
+	color: var(--primary-colour);
+	padding: .5rem 2rem;
+	border-width: 2px;
+}
+
+button[data-micromodal-trigger="event-modal"].fixed {
 	position: fixed;
-	right: 2rem;
-	bottom: 2rem;
+	right: 1.5rem;
+	bottom: 1.5rem;
 }
 
 /**************************\
@@ -865,7 +873,7 @@ button[data-micromodal-trigger="modal-1"] {
 
 .accordion .question button {
 	padding: 0;
-	margin-left: 2rem;
+	margin-left: 1.5rem;
 	border-style: none;
 	transform-origin: 50% 50%;
 	--size: 20px;
@@ -886,7 +894,7 @@ button[data-micromodal-trigger="modal-1"] {
 
 .sub-menu a {
 	color: #FFF;
-	padding: 0.5rem 2rem 0.5rem 0.5rem;
+	padding: 0.5rem 1.5rem 0.5rem 0.5rem;
 }
 
 .menu a {
