--- a/sass/_utilities.scss
+++ b/sass/_utilities.scss
@@ -246,6 +246,28 @@
   }
 }
 
+@media (min-width: $lg) {
+  .lg\:cols-profile {
+    grid-template-columns: 400px 1fr;
+  }
+
+  .lg\:cols-2 {
+      grid-template-columns: repeat(2, 1fr);
+  }
+
+  .lg\:col-span-2 {
+      grid-column: 1 / 3;
+  }
+
+  .lg\:cols-3 {
+      grid-template-columns: repeat(3, 1fr);
+  }
+
+  .lg\:gap-y-space-2 {
+      grid-column-gap: calc(#{$space} * 2);
+  }
+}
+
 /**
 * Display
 */
