--- a/style.css
+++ b/style.css
@@ -149,11 +149,11 @@ h6 {
 * Space
 */
 .mb-space-half {
-	margin-bottom: calc(1.5rem / 2);
+	margin-bottom: calc(1.75rem / 2);
 }
 
 .mt-space-half {
-	margin-top: calc(1.5rem / 2);
+	margin-top: calc(1.75rem / 2);
 }
 
 .mx-auto {
@@ -162,48 +162,48 @@ h6 {
 }
 
 .mt-space {
-	margin-top: 1.5rem;
+	margin-top: 1.75rem;
 }
 
 .ml-space {
-	margin-left: 1.5rem;
+	margin-left: 1.75rem;
 }
 
 .mt-space-2 {
-	margin-top: calc(1.5rem * 2);
+	margin-top: calc(1.75rem * 2);
 }
 
 .mb-space {
-	margin-bottom: 1.5rem;
+	margin-bottom: 1.75rem;
 }
 
 .px-space {
-	padding-left: 1.5rem;
-	padding-right: 1.5rem;
+	padding-left: 1.75rem;
+	padding-right: 1.75rem;
 }
 
 .py-space-half {
-	padding-top: calc(1.5rem / 2);
-	padding-bottom: calc(1.5rem / 2);
+	padding-top: calc(1.75rem / 2);
+	padding-bottom: calc(1.75rem / 2);
 }
 
 .py-space {
-	padding-top: 1.5rem;
-	padding-bottom: 1.5rem;
+	padding-top: 1.75rem;
+	padding-bottom: 1.75rem;
 }
 
 .py-space-2 {
-	padding-top: calc(1.5rem * 2);
-	padding-bottom: calc(1.5rem * 2);
+	padding-top: calc(1.75rem * 2);
+	padding-bottom: calc(1.75rem * 2);
 }
 
 .py-space-3 {
-	padding-top: calc(1.5rem * 3);
-	padding-bottom: calc(1.5rem * 3);
+	padding-top: calc(1.75rem * 3);
+	padding-bottom: calc(1.75rem * 3);
 }
 
 .p-space {
-	padding: 1.5rem;
+	padding: 1.75rem;
 }
 
 /**
@@ -214,27 +214,27 @@ h6 {
 }
 
 .gap-space {
-	grid-gap: 1.5rem;
+	grid-gap: 1.75rem;
 }
 
 .gap-y-space {
-	grid-row-gap: 1.5rem;
+	grid-row-gap: 1.75rem;
 }
 
 .gap-x-space {
-	grid-column-gap: 1.5rem;
+	grid-column-gap: 1.75rem;
 }
 
 .gap-y-space-half {
-	grid-row-gap: calc(1.5rem / 2);
+	grid-row-gap: calc(1.75rem / 2);
 }
 
 .gap-space-half {
-	grid-gap: calc(1.5rem / 2);
+	grid-gap: calc(1.75rem / 2);
 }
 
 .gap {
-	grid-gap: calc(1.5rem / 3);
+	grid-gap: calc(1.75rem / 3);
 }
 
 .cols-profile {
@@ -273,7 +273,25 @@ h6 {
 		grid-template-columns: repeat(3, 1fr);
 	}
 	.md\:gap-y-space-2 {
-		grid-column-gap: calc(1.5rem * 2);
+		grid-column-gap: calc(1.75rem * 2);
+	}
+}
+
+@media (min-width: 55em) {
+	.lg\:cols-profile {
+		grid-template-columns: 400px 1fr;
+	}
+	.lg\:cols-2 {
+		grid-template-columns: repeat(2, 1fr);
+	}
+	.lg\:col-span-2 {
+		grid-column: 1 / 3;
+	}
+	.lg\:cols-3 {
+		grid-template-columns: repeat(3, 1fr);
+	}
+	.lg\:gap-y-space-2 {
+		grid-column-gap: calc(1.75rem * 2);
 	}
 }
 
@@ -548,7 +566,7 @@ form label {
 # Theme
 --------------------------------------------------------------*/
 .site-header {
-	padding: calc(1.5rem / 2) 1.5rem;
+	padding: calc(1.75rem / 2) 1.75rem;
 	border-bottom: 1px solid #e3eaef;
 }
 
@@ -627,7 +645,7 @@ form label {
 	display: inline-block;
 	border-radius: 20px;
 	background-color: var(--primary-colour);
-	padding: calc(1.5rem / 4) 1.5rem;
+	padding: calc(1.75rem / 4) 1.75rem;
 	color: #FFF;
 }
 
@@ -778,8 +796,8 @@ form label {
 
 button[data-micromodal-trigger="event-modal"].fixed {
 	position: fixed;
-	right: 1.5rem;
-	bottom: 1.5rem;
+	right: 1.75rem;
+	bottom: 1.75rem;
 }
 
 /**************************\
@@ -873,7 +891,7 @@ button[data-micromodal-trigger="event-modal"].fixed {
 
 .accordion .question button {
 	padding: 0;
-	margin-left: 1.5rem;
+	margin-left: 1.75rem;
 	border-style: none;
 	transform-origin: 50% 50%;
 	--size: 20px;
@@ -894,7 +912,7 @@ button[data-micromodal-trigger="event-modal"].fixed {
 
 .sub-menu a {
 	color: #FFF;
-	padding: 0.5rem 1.5rem 0.5rem 0.5rem;
+	padding: 0.5rem 1.75rem 0.5rem 0.5rem;
 }
 
 .menu a {
