--- a/sass/base/elements/_body.scss
+++ b/sass/base/elements/_body.scss
@@ -4,6 +4,6 @@
 
 body {
 	margin: 0;
-	background: $color__background-body; // Fallback for when there is no custom background color defined.
+	background: var(--secondary-colour); // Fallback for when there is no custom background color defined.
 }
 
