--- a/sass/base/elements/_buttons.scss
+++ b/sass/base/elements/_buttons.scss
@@ -33,3 +33,7 @@ input[type="submit"] {
 	border: 2px solid var(--primary-colour);
 	padding: .5rem;	
 }
+
+.wpdt-c button {
+	color: #FFF !important;
+}
