Updated functions and styles

--- a/sass/theme/components/_modal.scss
+++ b/sass/theme/components/_modal.scss
@@ -135,3 +135,7 @@ button[data-micromodal-trigger="event-modal"].fixed {
 .micromodal-slide .modal__overlay {
   will-change: transform;
 }
+
+.heart {
+  height: 20px;
+}
