--- a/sass/_navigation.scss
+++ b/sass/_navigation.scss
@@ -11,6 +11,28 @@
 	text-decoration: none;
 }
 
+.main-navigation.toggled  #primary-menu {
+	position: fixed;
+	display: block;
+	left: 0;
+	top: 0;
+	background: var(--secondary-colour);
+	height: 100%;
+	padding: 2rem 0;
+	box-shadow:
+	0 2.8px 2.2px rgba(0, 0, 0, 0.006),
+	0 6.7px 5.3px rgba(0, 0, 0, 0.008),
+	0 12.5px 10px rgba(0, 0, 0, 0.01),
+	0 22.3px 17.9px rgba(0, 0, 0, 0.012),
+	0 41.8px 33.4px rgba(0, 0, 0, 0.014),
+	0 100px 80px rgba(0, 0, 0, 0.02)
+	;
+
+	li a {
+		padding: 1rem 5rem 1rem 2rem;
+	}
+}
+
 .main-navigation {
 	display: flex;
 	align-items: center;
