--- a/sass/theme/components/_card.scss
+++ b/sass/theme/components/_card.scss
@@ -1,5 +1,4 @@
 .card {
-    min-height: 200px;
     box-shadow:
     0 2.8px 2.2px rgba(0, 0, 0, 0.006),
     0 6.7px 5.3px rgba(0, 0, 0, 0.008),
@@ -19,6 +18,10 @@
     a {
         text-decoration: none
     }
+}
+
+.card:not(.accordion) {
+    min-height: 200px;
 }
 
 .cardData {
