--- a/sass/_utilities.scss
+++ b/sass/_utilities.scss
@@ -117,6 +117,10 @@
   margin-bottom: calc(#{$space} / 2);
 }
 
+.mt {
+  margin-top: .25rem;
+}
+
 .mt-space-half {
   margin-top: calc(#{$space} / 2);
 }
