--- a/sass/theme/components/_card.scss
+++ b/sass/theme/components/_card.scss
@@ -45,3 +45,22 @@
         color: currentColor
     }
 }
+
+.liked-profiles {
+    text-align: center;
+
+    @media (min-width: 445px) {
+        grid-template-columns: repeat(2, 1fr);   
+    }
+
+    @media (min-width: 600px) {
+        grid-template-columns: repeat(3, 1fr);   
+    }
+
+    @media (min-width: 900px) {
+        grid-template-columns: repeat(4, 1fr);   
+    }
+}
+
+.liked-profiles .card {
+}
